--- a/entry_stats/Entry_word_counts.ipynb
+++ b/entry_stats/Entry_word_counts.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function connection.close>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_response(answer, transcription, q_type):\n",
     "    if q_type in ['TextQuestion', 'TitleQuestion']:\n",
@@ -134,9 +145,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>part_num</th>\n",
+       "      <th>question_num</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.498436</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.089278</td>\n",
+       "      <td>3355</td>\n",
+       "      <td>959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>138.695925</td>\n",
+       "      <td>143</td>\n",
+       "      <td>41.720460</td>\n",
+       "      <td>132732</td>\n",
+       "      <td>957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.986152</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.240882</td>\n",
+       "      <td>14232</td>\n",
+       "      <td>4766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>28.183069</td>\n",
+       "      <td>22</td>\n",
+       "      <td>24.589583</td>\n",
+       "      <td>26633</td>\n",
+       "      <td>945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.985027</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.144669</td>\n",
+       "      <td>2791</td>\n",
+       "      <td>935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>147.529412</td>\n",
+       "      <td>147</td>\n",
+       "      <td>43.745700</td>\n",
+       "      <td>137940</td>\n",
+       "      <td>935</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   part_num  question_num        mean  median        std     sum  count\n",
+       "0         2             2    3.498436       3   2.089278    3355    959\n",
+       "1         2             5  138.695925     143  41.720460  132732    957\n",
+       "2         3             1    2.986152       3   1.240882   14232   4766\n",
+       "3         3             9   28.183069      22  24.589583   26633    945\n",
+       "4         4             1    2.985027       3   1.144669    2791    935\n",
+       "5         4             3  147.529412     147  43.745700  137940    935"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "responses.groupby(['part_num','question_num'])['word_count'].agg(['mean','median','std','sum','count']).reset_index()"
    ]
@@ -150,9 +271,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>part_num</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>71.026618</td>\n",
+       "      <td>11</td>\n",
+       "      <td>73.777301</td>\n",
+       "      <td>136087</td>\n",
+       "      <td>1916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7.155489</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13.745331</td>\n",
+       "      <td>40865</td>\n",
+       "      <td>5711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>75.257219</td>\n",
+       "      <td>6</td>\n",
+       "      <td>78.632375</td>\n",
+       "      <td>140731</td>\n",
+       "      <td>1870</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   part_num       mean  median        std     sum  count\n",
+       "0         2  71.026618      11  73.777301  136087   1916\n",
+       "1         3   7.155489       3  13.745331   40865   5711\n",
+       "2         4  75.257219       6  78.632375  140731   1870"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "responses.groupby(['part_num'])['word_count'].agg(['mean','median','std','sum','count']).reset_index()"
    ]
@@ -166,9 +360,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TextQuestion</td>\n",
+       "      <td>28.183069</td>\n",
+       "      <td>22</td>\n",
+       "      <td>24.589583</td>\n",
+       "      <td>26633</td>\n",
+       "      <td>945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TitleQuestion</td>\n",
+       "      <td>3.059760</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.394980</td>\n",
+       "      <td>20378</td>\n",
+       "      <td>6660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VideoQuestion</td>\n",
+       "      <td>143.061311</td>\n",
+       "      <td>145</td>\n",
+       "      <td>42.949781</td>\n",
+       "      <td>270672</td>\n",
+       "      <td>1892</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            type        mean  median        std     sum  count\n",
+       "0   TextQuestion   28.183069      22  24.589583   26633    945\n",
+       "1  TitleQuestion    3.059760       3   1.394980   20378   6660\n",
+       "2  VideoQuestion  143.061311     145  42.949781  270672   1892"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "responses.groupby(['type'])['word_count'].agg(['mean','median','std','sum','count']).reset_index()"
    ]
@@ -182,9 +449,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>word_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mean</td>\n",
+       "      <td>33.450879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>median</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>std</td>\n",
+       "      <td>58.933327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sum</td>\n",
+       "      <td>317683.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>count</td>\n",
+       "      <td>9497.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index     word_count\n",
+       "0    mean      33.450879\n",
+       "1  median       3.000000\n",
+       "2     std      58.933327\n",
+       "3     sum  317683.000000\n",
+       "4   count    9497.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "responses['word_count'].agg(['mean','median','std','sum','count']).reset_index()"
    ]
