updated export code to handle multiple

--- a/regression_tools/Export_part_data.ipynb
+++ b/regression_tools/Export_part_data.ipynb
@@ -10,20 +10,11 @@
     "import os\n",
     "import pandas as pd\n",
     "import psycopg2\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split, cross_val_predict\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn import linear_model\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import preprocessing\n",
+    "\n",
     "from urllib.parse import urlparse\n",
     "from urllib import parse\n",
-    "from lib.build_regressions_features_no_na import MixedFeatureData\n",
-    "from lib.explore_data import ExploratoryAnalysis\n",
-    "from lib.regressions_statsmodel import MixedClassificationModel, RegressionModel\n",
+    "from lib.build_export_features import MixedFeatureData\n",
+    "\n",
     "\n",
     "%matplotlib inline\n",
     "FOLLOWER_URL = os.environ['FOLLOWER_URL']\n",
@@ -59,7 +50,7 @@
     "# ONLY USE SINGLE QUESTIONS FOR DEPENDENT AND INDEPENDENT VARIABLES IN FORMAT 'PART_NUM-QUESTION_NUM'\n",
     "# ALL \"4-4\", \"4-5\",\"4-6\", \"4-10\",\"4-11\",\"4-12\", \"4-13\",\"4-14\",\"4-15\",\"4-17\",\"4-18\",\"4-19\",\"4-21\"\n",
     "continuous_independent_variables = [\n",
-    "    \"4-6\", \"4-10\",\"4-4\",\"4-5\",\"4-11\",\"4-17\"\n",
+    "    \"4-4\", \"4-5\",\"4-6\", \"4-10\",\"4-11\",\"4-12\", \"4-13\",\"4-14\",\"4-15\",\"4-17\",\"4-18\",\"4-19\",\"4-21\"\n",
     "]\n",
     "# NOTE MULTIPLE QUESTIONS NEED TO BE CATEGORICAL\n",
     "categorical_independent_variables = []\n",
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +106,7 @@
        "<function connection.close>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,17 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#response_data.to_pickle('mission_'+mission_id+'_data.pkl')\n",
-    "#response_data.to_csv('mission_'+mission_id+'_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing\n"
+     ]
+    }
+   ],
    "source": [
     "fd = MixedFeatureData(\n",
     "    response_data,\n",
@@ -254,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,33 +251,108 @@
     "#parts\n",
     "part_questions = [response_data[response_data['part_position'] == p]['question_position'].unique() for p in parts]\n",
     "part_questions\n",
-    "question_names = [[str(1+p)+'-'+str(1+q) for q in part_questions[p]] for p in parts]"
+    "question_names = [[str(1+p)+'-'+str(1+q) for q in part_questions[p]] for p in parts]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed = fd.processed()"
+    "def unlistify(df, column):\n",
+    "    matches = [i for i,n in enumerate(df.columns)\n",
+    "             if n==column]\n",
+    "\n",
+    "    if len(matches)==0:\n",
+    "        raise Exception('Failed to find column named ' + column +'!')\n",
+    "    if len(matches)>1:\n",
+    "        raise Exception('More than one column named ' + column +'!')\n",
+    "\n",
+    "    col_idx = matches[0]\n",
+    "\n",
+    "  # Helper function to expand and repeat the column col_idx\n",
+    "    def fnc(d):\n",
+    "        row = list(d.values[0])\n",
+    "        bef = row[:col_idx]\n",
+    "        aft = row[col_idx+1:]\n",
+    "        col = row[col_idx]\n",
+    "        z = [bef + [c] + aft for c in col]\n",
+    "        return pd.DataFrame(z)\n",
+    "\n",
+    "    col_idx += len(df.index.shape) # Since we will push reset the index\n",
+    "    index_names = list(df.index.names)\n",
+    "    column_names = list(index_names) + list(df.columns)\n",
+    "    return (df\n",
+    "          .reset_index()\n",
+    "          .groupby(level=0,as_index=0)\n",
+    "          .apply(fnc)\n",
+    "          .rename(columns = lambda i :column_names[i])\n",
+    "          .set_index(index_names)\n",
+    "          )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed = fd.processed_df#[fd.processed_df['type'] != 'MultipleQuestion']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for p in parts:\n",
     "    \n",
-    "    part_df = (\n",
-    "        processed[processed['question_name'].isin(question_names[p])]\n",
-    "        [['snippet_id','question_name','response']]\n",
+    "    part_df_single = (\n",
+    "        processed[\n",
+    "            (processed['question_name'].isin(question_names[p])) &\n",
+    "            (processed['type'] != 'MultipleQuetsion') \n",
+    "        ]\n",
+    "        [['snippet_id','question_name','response_clean']]\n",
     "        .pivot(\n",
-    "            index='snippet_id', columns=\"question_name\", values=\"response\"\n",
-    "        )\n",
+    "            index='snippet_id', columns=\"question_name\", values=\"response_clean\"\n",
+    "        ).reset_index()\n",
     "    )\n",
+    "    part_df_multiple = pd.DataFrame()\n",
+    "    for qn in question_names[p]:\n",
+    "        if processed[processed['question_name'] == qn]['type'].iloc[0] != 'MultipleQuestion':\n",
+    "            pass\n",
+    "        else:\n",
+    "            q_df = processed[processed['question_name'] == qn][['snippet_id','answers']]\n",
+    "            q_df = unlistify(q_df,'answers')\n",
+    "            q_df = pd.get_dummies(q_df[['snippet_id','answers']], columns=['answers'], prefix=qn)\n",
+    "            if len(part_df_multiple) == 0:\n",
+    "                part_df_multiple = q_df.copy()\n",
+    "            else:\n",
+    "                part_df_multiple = pd.merge(part_df_multiple, q_df, on='snippet_id')\n",
+    "    if len(part_df_multiple) == 0:\n",
+    "        part_df = part_df_single.copy()\n",
+    "    else:\n",
+    "        part_df = pd.merge(\n",
+    "            part_df_single,\n",
+    "            part_df_multiple,\n",
+    "            on='snippet_id'\n",
+    "        )\n",
+    "        \n",
     "    part_df = pd.merge(\n",
     "        part_df,\n",
     "        user_snippets,\n",
@@ -299,14 +363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for independent_variable in fd.independent_variables:\n",
-    "    if independent_variable in fd.binary_independent_variables or\\\n",
-    "       independent_variable in fd.dummies:\n",
-    "        logistic_regression.simulate_binary_outcomes(independent_variable)"
+    "part_df"
    ]
   },
   {
