changes to export code

--- a/regression_tools/Export_part_data.ipynb
+++ b/regression_tools/Export_part_data.ipynb
@@ -243,15 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i, part_df in enumerate(fd.export_list):\n",
     "    \n",
-    "    pd.merge(part_df,\n",
-    "             user_snippets,\n",
-    "             on='snippet_id').to_csv('mission_'+mission_id+'_part_'+str(i+1)+'_data.csv')"
+    "    pd.merge(\n",
+    "        user_snippets,\n",
+    "        part_df,     \n",
+    "        on='snippet_id').to_csv('mission_'+mission_id+'_part_'+str(i+1)+'_data.csv')"
    ]
   },
   {
